# RemoteLogger

./: CMakeLists.txt  CMakePresets.json  cert.pem  dhparams.pem  key.pem
RemoteLogger/: CMakeLists.txt  DBUtil.hpp  FileUtil.hpp  RemoteLogger.cpp  RemoteLogger.h  SampleLog.txt
RemoteLogger/SSLConnection/: Acceptor.cpp  Acceptor.hpp  Server.cpp  Server.hpp  Service.cpp  Service.hpp
RemoteLogger/TCPConnection/: Acceptor.cpp  Acceptor.hpp  Server.cpp  Server.hpp  Service.cpp  Service.hpp
RemoteLogger/UDPConnection/: Acceptor.cpp  Acceptor.hpp  Server.cpp  Server.hpp  Service.cpp  Service.hpp
RemoteLogger/Util/: DBUtil.cpp  DBUtil.hpp  FileUtil.cpp  FileUtil.hpp
